# PluginPenguin

./: .gitignore  CMakeLists.txt  PluginEngine.cpp  PluginEngine.hpp
Language/: Language.hpp
NativeRegistry/: NativeRegistry.cpp  NativeRegistry.hpp
Script/: Script.cpp  Script.hpp
ScriptRegistry/: ScriptRegistry.cpp  ScriptRegistry.hpp
